bindings/go/ffi/slatedb.h

uint16_t uniffi_slatedb_ffi_checksum_constructor_ffisettings_load(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffiwalreader_new(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_constructor_ffiwritebatch_new(void
    
);
uint32_t ffi_slatedb_ffi_uniffi_contract_version(void
    
);