bindings/python/src/slatedb/ffi/slatedb.py

_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffisettings_load.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffiwalreader_new.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffiwalreader_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffiwritebatch_new.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_constructor_ffiwritebatch_new.restype = ctypes.c_uint16
_UniffiLib.ffi_slatedb_ffi_uniffi_contract_version.argtypes = ()
_UniffiLib.ffi_slatedb_ffi_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.
# Magic number for the Rust proxy to call using the same mechanism as every other method,
# to free the callback once it's dropped by Rust.
_UNIFFI_IDX_CALLBACK_FREE = 0
# Return codes for callback calls
_UNIFFI_CALLBACK_SUCCESS = 0
_UNIFFI_CALLBACK_ERROR = 1
_UNIFFI_CALLBACK_UNEXPECTED_ERROR = 2


class _UniffiCallbackInterfaceFfiConverter:
    _handle_map = _UniffiHandleMap()

    @classmethod
    def lift(cls, handle):
        return cls._handle_map.get(handle)

    @classmethod
    def read(cls, buf):
        handle = buf.read_u64()
        cls.lift(handle)

    @classmethod
    def check_lower(cls, cb):
        pass

    @classmethod
    def lower(cls, cb):
        handle = cls._handle_map.insert(cb)
        return handle

    @classmethod
    def write(cls, cb, buf):
        buf.write_u64(cls.lower(cb))


class _UniffiConverterUInt32(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u32"
    VALUE_MIN = 0
    VALUE_MAX = 2**32

    @staticmethod
    def read(buf):
        return buf.read_u32()

    @staticmethod
    def write(value, buf):
        buf.write_u32(value)


class _UniffiConverterUInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u64"
    VALUE_MIN = 0
    VALUE_MAX = 2**64

    @staticmethod
    def read(buf):
        return buf.read_u64()

    @staticmethod
    def write(value, buf):
        buf.write_u64(value)


class _UniffiConverterInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "i64"
    VALUE_MIN = -(2**63)
    VALUE_MAX = 2**63

    @staticmethod
    def read(buf):
        return buf.read_i64()

    @staticmethod
    def write(value, buf):
        buf.write_i64(value)


class _UniffiConverterBool:
    @classmethod
    def check_lower(cls, value):
        return not not value

    @classmethod
    def lower(cls, value):
        return 1 if value else 0

    @staticmethod
    def lift(value):
        return value != 0

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.read_u8())

    @classmethod
    def write(cls, value, buf):
        buf.write_u8(value)


class _UniffiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()


class _UniffiConverterBytes(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative byte string length")
        return buf.read(size)

    @staticmethod
    def check_lower(value):
        try:
            memoryview(value)
        except TypeError:
            raise TypeError(
                "a bytes-like object is required, not {!r}".format(type(value).__name__)
            )

    @staticmethod
    def write(value, buf):
        buf.write_i32(len(value))
        buf.write(value)


class FfiFlushOptions:
    flush_type: "FfiFlushType"

    def __init__(self, *, flush_type: "FfiFlushType"):
        self.flush_type = flush_type

    def __str__(self):
        return "FfiFlushOptions(flush_type={})".format(self.flush_type)

    def __eq__(self, other):
        if self.flush_type != other.flush_type:
            return False
        return True


class _UniffiConverterTypeFfiFlushOptions(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return FfiFlushOptions(
            flush_type=_UniffiConverterTypeFfiFlushType.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiConverterTypeFfiFlushType.check_lower(value.flush_type)

    @staticmethod
    def write(value, buf):
        _UniffiConverterTypeFfiFlushType.write(value.flush_type, buf)


class FfiKeyRange:
    start: "typing.Optional[bytes]"
    start_inclusive: "bool"
    end: "typing.Optional[bytes]"
    end_inclusive: "bool"

    def __init__(
        self,
        *,
        start: "typing.Optional[bytes]",
        start_inclusive: "bool",
        end: "typing.Optional[bytes]",
        end_inclusive: "bool",
    ):
        self.start = start
        self.start_inclusive = start_inclusive
        self.end = end
        self.end_inclusive = end_inclusive

    def __str__(self):
        return "FfiKeyRange(start={}, start_inclusive={}, end={}, end_inclusive={})".format(
            self.start, self.start_inclusive, self.end, self.end_inclusive
        )

    def __eq__(self, other):
        if self.start != other.start:
            return False
        if self.start_inclusive != other.start_inclusive:
            return False
        if self.end != other.end:
            return False
        if self.end_inclusive != other.end_inclusive:
            return False
        return True


class _UniffiConverterTypeFfiKeyRange(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return FfiKeyRange(
            start=_UniffiConverterOptionalBytes.read(buf),
            start_inclusive=_UniffiConverterBool.read(buf),
            end=_UniffiConverterOptionalBytes.read(buf),
            end_inclusive=_UniffiConverterBool.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiConverterOptionalBytes.check_lower(value.start)
        _UniffiConverterBool.check_lower(value.start_inclusive)
        _UniffiConverterOptionalBytes.check_lower(value.end)
        _UniffiConverterBool.check_lower(value.end_inclusive)

    @staticmethod
    def write(value, buf):
        _UniffiConverterOptionalBytes.write(value.start, buf)
        _UniffiConverterBool.write(value.start_inclusive, buf)
        _UniffiConverterOptionalBytes.write(value.end, buf)
        _UniffiConverterBool.write(value.end_inclusive, buf)


class FfiKeyValue:
    key: "bytes"
    value: "bytes"
    seq: "int"
    create_ts: "int"
    expire_ts: "typing.Optional[int]"

    def __init__(
        self,
        *,
        key: "bytes",
        value: "bytes",
        seq: "int",
        create_ts: "int",
        expire_ts: "typing.Optional[int]",
    ):
        self.key = key
        self.value = value
        self.seq = seq
        self.create_ts = create_ts
        self.expire_ts = expire_ts

    def __str__(self):
        return "FfiKeyValue(key={}, value={}, seq={}, create_ts={}, expire_ts={})".format(
            self.key, self.value, self.seq, self.create_ts, self.expire_ts
        )

    def __eq__(self, other):
        if self.key != other.key:
            return False
        if self.value != other.value:
            return False
        if self.seq != other.seq:
            return False
        if self.create_ts != other.create_ts:
            return False
        if self.expire_ts != other.expire_ts:
            return False
        return True


class _UniffiConverterTypeFfiKeyValue(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return FfiKeyValue(
            key=_UniffiConverterBytes.read(buf),
            value=_UniffiConverterBytes.read(buf),
            seq=_UniffiConverterUInt64.read(buf),
            create_ts=_UniffiConverterInt64.read(buf),
            expire_ts=_UniffiConverterOptionalInt64.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiConverterBytes.check_lower(value.key)
        _UniffiConverterBytes.check_lower(value.value)
        _UniffiConverterUInt64.check_lower(value.seq)
        _UniffiConverterInt64.check_lower(value.create_ts)
        _UniffiConverterOptionalInt64.check_lower(value.expire_ts)

    @staticmethod
    def write(value, buf):
        _UniffiConverterBytes.write(value.key, buf)
        _UniffiConverterBytes.write(value.value, buf)
        _UniffiConverterUInt64.write(value.seq, buf)
        _UniffiConverterInt64.write(value.create_ts, buf)
        _UniffiConverterOptionalInt64.write(value.expire_ts, buf)


class FfiLogRecord:
    level: "FfiLogLevel"
    target: "str"
    message: "str"
    module_path: "typing.Optional[str]"
    file: "typing.Optional[str]"
    line: "typing.Optional[int]"

    def __init__(
        self,
        *,
        level: "FfiLogLevel",
        target: "str",
        message: "str",
        module_path: "typing.Optional[str]",
        file: "typing.Optional[str]",
        line: "typing.Optional[int]",
    ):
        self.level = level
        self.target = target
        self.message = message
        self.module_path = module_path
        self.file = file
        self.line = line

    def __str__(self):
        return "FfiLogRecord(level={}, target={}, message={}, module_path={}, file={}, line={})".format(
            self.level, self.target, self.message, self.module_path, self.file, self.line
        )

    def __eq__(self, other):
        if self.level != other.level:
            return False
        if self.target != other.target:
            return False
        if self.message != other.message:
            return False
        if self.module_path != other.module_path:
            return False
        if self.file != other.file:
            return False
        if self.line != other.line:
            return False
        return True


class _UniffiConverterTypeFfiLogRecord(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return FfiLogRecord(
            level=_UniffiConverterTypeFfiLogLevel.read(buf),
            target=_UniffiConverterString.read(buf),
            message=_UniffiConverterString.read(buf),
            module_path=_UniffiConverterOptionalString.read(buf),
            file=_UniffiConverterOptionalString.read(buf),
            line=_UniffiConverterOptionalUInt32.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiConverterTypeFfiLogLevel.check_lower(value.level)
        _UniffiConverterString.check_lower(value.target)
        _UniffiConverterString.check_lower(value.message)
        _UniffiConverterOptionalString.check_lower(value.module_path)
        _UniffiConverterOptionalString.check_lower(value.file)
        _UniffiConverterOptionalUInt32.check_lower(value.line)

    @staticmethod
    def write(value, buf):
        _UniffiConverterTypeFfiLogLevel.write(value.level, buf)
        _UniffiConverterString.write(value.target, buf)
        _UniffiConverterString.write(value.message, buf)
        _UniffiConverterOptionalString.write(value.module_path, buf)
        _UniffiConverterOptionalString.write(value.file, buf)
        _UniffiConverterOptionalUInt32.write(value.line, buf)


class FfiMergeOptions:
    ttl: "FfiTtl"

    def __init__(self, *, ttl: "FfiTtl"):
        self.ttl = ttl
